include_directories(libretro/libretro-common/include)

add_subdirectory(libretro/libretro-common)

add_library(NXEngine SHARED
    libretro/libretro.cpp
    libretro/LibretroManager.cpp
    settings.cpp
    i18n/translate.cpp
    i18n/minibidi.cpp
    autogen/AssignSprites.cpp
    endgame/misc.cpp
    endgame/credits.cpp
    endgame/CredReader.cpp
    endgame/island.cpp
    slope.cpp
    screeneffect.cpp
    input.cpp
    statusbar.cpp
    ObjManager.cpp
    object.cpp
    stagedata.cpp
    game.cpp
    tsc.cpp
    map_system.cpp
    siflib/sif.cpp
    siflib/sectSprites.cpp
    siflib/sectStringArray.cpp
    siflib/sifloader.cpp
    map.cpp
    intro/title.cpp
    intro/intro.cpp
    ResourceManager.cpp
    profile.cpp
    Utils/Logger.cpp
    console.cpp
    inventory.cpp
    player.cpp
    trig.cpp
    graphics/Tileset.cpp
    graphics/Renderer.cpp
    graphics/Font.cpp
    graphics/Surface.cpp
    graphics/Sprites.cpp
    p_arms.cpp
    playerstats.cpp
    caret.cpp
    ai/boss/omega.cpp
    ai/boss/x.cpp
    ai/boss/heavypress.cpp
    ai/boss/balfrog.cpp
    ai/boss/undead_core.cpp
    ai/boss/core.cpp
    ai/boss/ironhead.cpp
    ai/boss/ballos.cpp
    ai/boss/sisters.cpp
    ai/sym/sym.cpp
    ai/sym/smoke.cpp
    ai/balrog_common.cpp
    ai/oside/oside.cpp
    ai/egg/igor.cpp
    ai/egg/egg2.cpp
    ai/egg/egg.cpp
    ai/maze/labyrinth_m.cpp
    ai/maze/maze.cpp
    ai/maze/pooh_black.cpp
    ai/maze/gaudi.cpp
    ai/maze/balrog_boss_missiles.cpp
    ai/maze/critter_purple.cpp
    ai/IrregularBBox.cpp
    ai/hell/ballos_priest.cpp
    ai/hell/hell.cpp
    ai/hell/ballos_misc.cpp
    ai/sand/puppy.cpp
    ai/sand/sand.cpp
    ai/sand/toroko_frenzied.cpp
    ai/sand/curly_boss.cpp
    ai/weed/frenzied_mimiga.cpp
    ai/weed/weed.cpp
    ai/weed/balrog_boss_flying.cpp
    ai/almond/almond.cpp
    ai/final_battle/final_misc.cpp
    ai/final_battle/misery.cpp
    ai/final_battle/doctor_common.cpp
    ai/final_battle/doctor_frenzied.cpp
    ai/final_battle/doctor.cpp
    ai/final_battle/sidekicks.cpp
    ai/final_battle/balcony.cpp
    ai/last_cave/last_cave.cpp
    ai/village/ma_pignon.cpp
    ai/village/village.cpp
    ai/village/balrog_boss_running.cpp
    ai/npc/misery.cpp
    ai/npc/npcregu.cpp
    ai/npc/curly_ai.cpp
    ai/npc/npcplayer.cpp
    ai/npc/balrog.cpp
    ai/npc/curly.cpp
    ai/npc/npcguest.cpp
    ai/weapons/weapons.cpp
    ai/weapons/whimstar.cpp
    ai/weapons/bubbler.cpp
    ai/weapons/polar_mgun.cpp
    ai/weapons/spur.cpp
    ai/weapons/nemesis.cpp
    ai/weapons/blade.cpp
    ai/weapons/missile.cpp
    ai/weapons/snake.cpp
    ai/weapons/fireball.cpp
    ai/ai.cpp
    ai/first_cave/first_cave.cpp
    ai/plantation/plantation.cpp
    niku.cpp
    pause/options.cpp
    pause/mods.cpp
    pause/dialog.cpp
    pause/message.cpp
    pause/pause.cpp
    pause/objects.cpp
    sound/Pixtone.cpp
    sound/Ogg.cpp
    sound/Organya.cpp
    sound/SoundManager.cpp
    sound/sslib.cpp
    floattext.cpp
    debug.cpp
    TextBox/YesNoPrompt.cpp
    TextBox/TextBox.cpp
    TextBox/SaveSelect.cpp
    TextBox/ItemImage.cpp
    TextBox/StageSelect.cpp
    stageboss.cpp
    common/glob.cpp
    common/InitList.cpp
    common/misc.cpp
    common/myfnmatch.cpp
)

target_link_libraries(NXEngine

PRIVATE
    libretro-common
)

set_property(TARGET NXEngine PROPERTY OUTPUT_NAME nxengine-evo)
